--- a/css/style.css
+++ b/css/style.css
@@ -392,13 +392,37 @@ ul .parent h2{
 .cat-picture img{
     margin:0 auto;
     padding-top:0;
-    width:600px;
+    width:100%;
     height:auto;
 }
 
 .cat-same-width{
-    width:500px;
+    width:600px;
     margin:0 auto;
+}
+/*boxデザインテンプレート*/
+.box25{
+    position: relative;
+    background: #fff0cd;
+    box-shadow: 0px 0px 0px 5px #fff0cd;
+    border: dashed 2px white;
+    padding: 0.2em 0.5em;
+    color: #454545;
+    margin-top:3em;
+}
+.box25:after{
+    position: absolute;
+    content: '';
+    right: -7px;
+    top: -7px;
+    border-width: 0 15px 15px 0;
+    border-style: solid;
+    border-color: #ffdb88 #fff #ffdb88;
+    box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.15);
+}
+.box25 p {
+    margin: 0;
+    padding: 0;
 }
 
 /*確認用
