--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,6 @@ ul .parent h2{
 .same-width{
     width:980px;/*ヘッダー以外や背景画像以外の幅を統一する*/
     margin:0 auto;
-    border:solid 3px red;
 }
 
 .body-txt-top section h1{
@@ -378,14 +377,12 @@ ul .parent h2{
 .contact-form{
     width:100%;
     height:1500px;
-    border:solid 3px red;
 }
 
 .form-box{
     margin:80px auto 0;
     width:80%;
     height: 100px;
-    border:solid 3px red;
 }
 
 /*----------------------------cat1～3の写真----------------------------------*/
@@ -420,9 +417,14 @@ ul .parent h2{
     border-color: #ffdb88 #fff #ffdb88;
     box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.15);
 }
-.box25 p {
+.box25 p{
     margin: 0;
     padding: 0;
+    font-size:21px;
+}
+
+.cat-picture-end{
+    margin-bottom:150px;
 }
 
 /*確認用
@@ -717,7 +719,7 @@ border:solid 3px red;
         display: flex;
     }
 
-    /*-------------------------------------cat1～3の写真---------------------------*/
+    /*-------------------------------------cat1～3---------------------------*/
     .cat-picture img{
         margin:0 auto;
         padding-top:0;
@@ -728,6 +730,12 @@ border:solid 3px red;
     .cat-same-width{
         width:350px;
         margin:0 auto;
+    }
+
+    .box25 p{
+        margin: 0;
+        padding: 0;
+        font-size:18px;
     }
     /*-------------------------スマホサイズのズレの原因除去---------------------------*/
     .second-block-img img{
@@ -862,5 +870,12 @@ border:solid 3px red;
         font-size:18px;
         line-height: 30px;
         margin:50px 0 100px 0;
+    }
+}
+/*iPhone5/SE*/
+@media screen and (max-width: 568px){
+    .cat-same-width{
+        width:300px;
+        margin:0 auto;
     }
 }
