--- a/css/style.css
+++ b/css/style.css
@@ -372,17 +372,38 @@ ul .parent h2{
     display: none;
 }
 
-/*Contactの設定*/
+/*---------------------------Contactの設定---------------------------------*/
 
 .contact-form{
     width:100%;
     height:1500px;
+    border:solid 3px red;
 }
 
-.form-box{
+.form-box-top{
     margin:80px auto 0;
-    width:80%;
-    height: 100px;
+    width:100%;
+    height:70px;
+    border:solid 3px #333333;
+    display: flex;
+}
+
+.form-box-top-center{
+    margin:0 auto;
+    display: flex;
+}
+
+.form-logo{
+    text-align: center;
+    display: flex;
+    text-align: center;
+}
+
+.cat-img img{
+    display:flex;
+    width:70px;
+    height:70px;
+    display: flex;
 }
 
 /*----------------------------cat1～3の写真----------------------------------*/
@@ -560,6 +581,22 @@ border:solid 3px red;
 
     .drawer-list{
         display: none;
+    }
+
+    /*--------------contactの設定------------------*/
+
+    .form-logo{
+        text-align: center;
+        display: flex;
+        text-align: center;
+        padding-top:10px;
+    }
+
+    .cat-img img{
+        display:flex;
+        width:70px;
+        height:65px;
+        display: flex;
     }
 }
 /*確認用
