--- a/css/style.css
+++ b/css/style.css
@@ -376,7 +376,7 @@ ul .parent h2{
 
 .contact-form{
     width:100%;
-    height:1500px;
+    height:auto;
     border:solid 3px red;
 }
 
@@ -404,6 +404,31 @@ ul .parent h2{
     width:70px;
     height:70px;
     display: flex;
+}
+
+.form-picture img{
+    width:100%;
+    height:auto;
+}
+
+.contact-from-container{
+    background-color:#F7F7F7;
+}
+
+.form-input{
+    margin-top:50px;
+}
+
+.form-space{
+    margin-right:20px;/*タブレットサイズ以降解除*/
+}
+
+.gray-box{
+    
+}
+
+.white-box{
+    border:solid 1px #333333;
 }
 
 /*----------------------------cat1～3の写真----------------------------------*/
