--- a/css/style.css
+++ b/css/style.css
@@ -407,12 +407,18 @@ ul .parent h2{
 }
 
 .form-picture img{
+    margin-top:50px;
     width:100%;
     height:auto;
 }
 
 .contact-from-container{
-    background-color:#F7F7F7;
+    background-color:rgb(231, 230, 230);
+}
+
+.form-innner-container{
+    width:80%;
+    margin:0 auto;
 }
 
 .form-input{
@@ -423,12 +429,9 @@ ul .parent h2{
     margin-right:20px;/*タブレットサイズ以降解除*/
 }
 
-.gray-box{
-    
-}
-
-.white-box{
-    border:solid 1px #333333;
+.contact-form-textarea{
+    width:60%;
+    height:150px;
 }
 
 /*----------------------------cat1～3の写真----------------------------------*/
@@ -932,6 +935,13 @@ border:solid 3px red;
         font-size:18px;
         line-height: 30px;
         margin:50px 0 100px 0;
+    }
+
+    /*--------------Contact-------------------*/
+
+    .contact-form-textarea{
+        width:100%;
+        height:150px;
     }
 }
 /*iPhone5/SE*/
