--- a/css/style-Lenovo-PC.css
+++ b/css/style-Lenovo-PC.css
@@ -246,7 +246,7 @@ ul .parent h2{
 .info-logo{
     font-size:40px;
     line-height: 68px;
-    margin-top:1150px;
+    margin-top:1000px;
     margin-bottom:100px;
     text-align: center;
 }
@@ -374,7 +374,6 @@ ul .parent h2{
 
 /*---------------------------Contactの設定---------------------------------*/
 
-
 .contact-form{
     width:100%;
     height:auto;
@@ -448,7 +447,7 @@ input{
 .important{
     margin-left:15px;
     background-color:rgb(233, 23, 19);
-    padding:3px;
+    padding:5px;
     color:white;
     font-weight:bold;
     border-radius:3px;
@@ -457,16 +456,7 @@ input{
 .optional{
     margin-left:15px;
     background-color:rgb(24, 24, 194);
-    padding:3px;
-    color:white;
-    font-weight:bold;
-    border-radius:3px;
-}
-
-.optional2{
-    margin-left:15px;
-    background-color:rgb(24, 24, 194);
-    padding:3px 3px 0 3px;
+    padding:5px 5px 0 5px;
     color:white;
     font-weight:bold;
     border-radius:3px;
@@ -545,6 +535,11 @@ border:solid 3px red;
     .body-logo{/*CATの大ロゴ*/
         top:180px;
         right:450px;
+    }
+
+    .header-container{
+        display: flex;
+        justify-content: space-between;
     }
 
     .header-container img{/*ヘッダーのロゴ*/
@@ -686,10 +681,6 @@ border:solid 3px red;
         width:450px;
         margin:0 auto;
     }
-
-    .form-space{
-        margin-right:0;/*タブレットサイズ以降解除*/
-    }
 }
 /*確認用
 border:solid 3px red;
@@ -763,10 +754,6 @@ border:solid 3px red;
     .header-container{
         width:100%;
         height:80%;
-    }
-
-    .drawer-list{
-        display: flex;
     }
 
     /*スマートフォンサイズの文字入力幅*/
@@ -845,6 +832,10 @@ border:solid 3px red;
         width:49px;
         height:auto;
         margin:16px 0 15px 0;
+        display: flex;
+    }
+
+    .drawer-list{
         display: flex;
     }
 
@@ -1022,10 +1013,6 @@ border:solid 3px red;
 @media screen and (max-width: 568px){
     .cat-same-width{
         width:300px;
-        margin:0 auto;
-    }
-
-    .form-box-top-center{
         margin:0 auto;
     }
 }
