--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,6 @@ ul .parent h2{
 .third-block-inner{
     display: flex;
     flex-direction:row;
-    flex-wrap: wrap;
     justify-content:flex-start;
 }
 
@@ -191,7 +190,7 @@ ul .parent h2{
 }
 
 .cat2-2 img{
-    height: 300px;
+    height:300px;
     width:450px;
 }
 
@@ -575,10 +574,13 @@ border:solid 3px red;
 
     .order2{
         order:2;
+        margin-left:40px;
     }
 
     .order3{
         order:4;
+        margin-left:40px;
+        margin-right:40px;
     }
 
     .order4{
@@ -591,6 +593,7 @@ border:solid 3px red;
 
     .order6{
         order:6;
+        margin-left:40px;
     }
 
     .white-inner-block{
@@ -834,6 +837,13 @@ border:solid 3px red;
         margin-bottom:100px;
         font-size: 21px;
         line-height:30px;
+    }
+
+    .third-block-inner{
+    display: flex;
+    flex-direction:row;
+    flex-wrap: wrap;
+    justify-content:flex-start;
     }
 
     .btn{
